--- a/data/benefits/javascript/mission-locale-de-lagglomeration-dhenin-carvin-aide-au-financement-du-permis-de-conduire-le-permis-cest-permis.yml
+++ b/data/benefits/javascript/mission-locale-de-lagglomeration-dhenin-carvin-aide-au-financement-du-permis-de-conduire-le-permis-cest-permis.yml
@@ -23,8 +23,10 @@ profils:
 conditions:
   - Avoir obtenu le code de la route.
   - Etre inscrit dans une auto-école partenaire.
-  - Effectuer 35 heures de bénévolat, des immersions professionnelles et un
+  - Effectuer des immersions professionnelles et un
     atelier de prévention et de sécurité routière.
+conditions_benevoles:
+  - Effectuer 35 heures de bénévolat.
 interestFlag: _interetPermisDeConduire
 type: float
 unit: €
