--- a/data/benefits/javascript/region-bourgogne-franche-comte-jeunes-citoyens-du-monde.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-jeunes-citoyens-du-monde.yml
@@ -3,7 +3,7 @@ institution: region_bourgogne_franche_comte
 description: La Région Bourgogne-Franche-Comté offre aux jeunes la possibilité
   d’acquérir une expérience dans le domaine de la solidarité internationale
   grâce à un soutien financier individuel.
-conditions:
+conditions_benevoles:
   - Mener une action de développement ou humanitaire à titre bénévole grâce à
     une structure relevant du secteur public, privé ou mixte.
 conditions_generales:
