--- a/data/benefits/javascript/departement_landes-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/departement_landes-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
@@ -15,6 +15,9 @@ conditions_generales:
   - type: age
     operator: <=
     value: 30
+conditions_benevoles:
+  - "Etre engagé dans une mission bénévole de 40 heures minimum dans une
+    collectivité ou une association des Landes."
 profils: []
 interestFlag: _interetPermisDeConduire
 type: float
