--- a/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
@@ -17,9 +17,9 @@ conditions_generales:
   - type: age
     operator: <=
     value: 25
-conditions_benevoles:
-  - "Etre engagé dans une mission bénévole de 35 heures minimum dans une
-    association du Pas-de-Calais."
+voluntary_conditions:
+  - Être engagé dans une mission bénévole de 35 heures minimum dans une
+    association du Pas-de-Calais.
 profils: []
 conditions:
   - Résider dans le Pas-de-Calais.
