--- a/data/benefits/javascript/ville_chaumes_en_retz-bourse-communale-au-permis-de-conduire-et-au-bsr.yml
+++ b/data/benefits/javascript/ville_chaumes_en_retz-bourse-communale-au-permis-de-conduire-et-au-bsr.yml
@@ -6,8 +6,8 @@ description:
   dans une association de la ville. Pour faire une demande de bourse, adressez-vous à la mairie. Les dossiers reçus sont examinés par le conseil municipal qui rend sa décision.
 prefix: la
 conditions_benevoles:
-  - "Etre engagé dans une mission bénévole de 20 heures minimum dans une
-    association de la ville."
+  - Être engagé dans une mission bénévole de 20 heures minimum dans une
+    association de la ville.
 conditions_generales:
   - type: age
     operator: ">="
