--- a/data/benefits/javascript/ville_dunkerque-bourse-communale-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/ville_dunkerque-bourse-communale-au-permis-de-conduire.yml
@@ -6,7 +6,7 @@ description:
   dans une association ou un service municipal. L’aide est versée directement à l’auto-école une fois la totalité des heures de bénévolat réalisée.
 prefix: la
 conditions_benevoles:
-  - "Etre engagé dans une mission bénévole de 50 heures minimum dans une association ou un service municipal."
+  - Être engagé dans une mission bénévole de 50 heures minimum dans une association ou un service municipal.
 conditions_generales:
   - type: communes
     values:
