--- a/data/benefits/javascript/mission-locale-de-lagglomeration-dhenin-carvin-aide-au-financement-du-permis-de-conduire-le-permis-cest-permis.yml
+++ b/data/benefits/javascript/mission-locale-de-lagglomeration-dhenin-carvin-aide-au-financement-du-permis-de-conduire-le-permis-cest-permis.yml
@@ -25,7 +25,7 @@ conditions:
   - Etre inscrit dans une auto-école partenaire.
   - Effectuer des immersions professionnelles et un
     atelier de prévention et de sécurité routière.
-conditions_benevoles:
+voluntary_conditions:
   - Effectuer 35 heures de bénévolat.
 interestFlag: _interetPermisDeConduire
 type: float
