--- a/data/benefits/javascript/ville-de-roubaix-bourse-communale-au-permis-de-conduire-passpermis.yml
+++ b/data/benefits/javascript/ville-de-roubaix-bourse-communale-au-permis-de-conduire-passpermis.yml
@@ -21,7 +21,7 @@ conditions:
   - Avoir déjà effectué la JAPD (Journée d'Appel de Préparation à la Défense).
   - Etre prêt à participer à un atelier d’éloquence afin de préparer l’oral à la
     commission d’attribution de la bourse.
-conditions_benevoles:
+voluntary_conditions:
   - Réaliser 35 heures d'action bénévole dans un service de la Ville de Roubaix.
 interestFlag: _interetPermisDeConduire
 type: float
