--- a/data/benefits/javascript/ville_nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/ville_nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
@@ -20,7 +20,7 @@ profils: []
 conditions:
   - Être non-imposable.
   - Avoir préalablement réussi le code de la route.
-conditions_benevoles:
+voluntary_conditions:
   - S’engager à la réalisation de 30 heures de bénévolat dans un service public
     ou un organisme à but non lucratif.
 interestFlag: _interetPermisDeConduire
