--- a/data/benefits/openfisca/vendee_bourses_jeunes_benevoles_montant_max.yml
+++ b/data/benefits/openfisca/vendee_bourses_jeunes_benevoles_montant_max.yml
@@ -8,7 +8,7 @@ conditions:
   - Apporter pour les personnes majeures la preuve d'une responsabilité dans le Bureau
     d'une association depuis au moins un an ou d'une implication régulière d'au
     moins deux ans.
-conditions_benevoles:
+voluntary_conditions:
   - Justifier pour les personnes mineures d'un engagement d'au moins un an dans une ou
     plusieurs associations domiciliées en Vendée.
 interestFlag: null
