--- a/data/benefits/javascript/region-pays-de-la-loire-prime-job-etudiant.yml
+++ b/data/benefits/javascript/region-pays-de-la-loire-prime-job-etudiant.yml
@@ -1,4 +1,4 @@
-label: Job étudiant ":" prime de 200 euros
+label: "Job étudiant : prime de 200 euros"
 institution: region_pays_de_la_loire
 description: La Région offre une prime à tous les jeunes qui cumulent emploi et études.
 prefix: l’aide
