mise à jour de la description de santé psy étudiant car prolongée en 2023 hors contexte de la crise sanitaire. C'est 8 séances et plus 6 comme précédemment

--- a/data/benefits/openfisca/seances_sante_psy_etudiant.yml
+++ b/data/benefits/openfisca/seances_sante_psy_etudiant.yml
@@ -1,6 +1,6 @@
 label: Santé Psy Étudiant
 institution: etat
-description: Pendant la crise sanitaire, vous pouvez bénéficier de séances de 45 minutes avec un psychologue gratuitement, sans avancer de frais.
+description: Vous êtes étudiant et vous ressentez le besoin d'une aide psychologique ? Vous pouvez bénéficier de 8 consultations gratuites avec un psychologue, sans avance de frais. Tous les étudiants qui le souhaitent peuvent en bénéficier.
 link: https://www.service-public.fr/particuliers/actualites/A14726
 instructions: https://santepsy.etudiant.gouv.fr
 conditions:
