--- a/data/benefits/javascript/pays-de-la-loire-aide-acquisition-ordinateur-portable.yml
+++ b/data/benefits/javascript/pays-de-la-loire-aide-acquisition-ordinateur-portable.yml
@@ -1,12 +1,13 @@
-label: Aide à l'acquisition d'un ordinateur portable
+label: Aide à l’acquisition d’un ordinateur portable
 institution: region_pays_de_la_loire
-description: Pour la rentrée 2021, la Région des Pays de la Loire fournit un
-  ordinateur portable à chaque élève de seconde et de première année de CAP des
-  lycées régionaux publics et privés. Cet outil de travail numérique individuel
+description: La Région Pays de la Loire offre un ordinateur à tous les lycéens
+  entrant en classe de Seconde et à tous les élèves en 1ère année de CAP, dans
+  les établissements publics comme privés. Cet outil de travail numérique individuel
   accompagnera les jeunes tout au long de leur scolarité, puis dans la poursuite
   de leurs études.
 link: https://www.paysdelaloire.fr/jeunesse-et-education/un-ordinateur-portable-fourni-par-la-region-aux-eleves-de-seconde-et-1ere-annee-de-cap
-instructions: https://www.paysdelaloire.fr/les-aides/mon-ordi-au-lycee
+instructions: https://www.paysdelaloire.fr/jeunesse-et-education/un-ordinateur-portable-fourni-par-la-region-aux-eleves-de-seconde-et-1ere-annee-de-cap
+teleservice: https://enquete.paysdelaloire.fr/surveyserver/s/paysdelaloire/176-DL-MonOrdiAuLycee/inscription.htm#3
 prefix: l’
 type: bool
 conditions_generales:
