--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@/*": ["src/*"],
       "@lib/*": ["lib/*"],
       "@data/*": ["data/*"],
-      "@backend": ["backend/*"]
+      "@backend/*": ["backend/*"],
+      "@root/*": ["*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
@@ -47,8 +48,7 @@
     "lib",
     "dist",
     "dist-server",
-    "tools",
-    "tests"
+    "tools"
   ],
   "ts-node": {
     "esm": true,
