modifie nom institution dans bourse communale au permis de conduire de cc sud-herault pour correspondre au renommage du fichier de l'institution de communaute de commune à cc

--- a/data/benefits/javascript/communaute-de-communes-sud-herault-bourse-communale-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/communaute-de-communes-sud-herault-bourse-communale-au-permis-de-conduire.yml
@@ -1,5 +1,5 @@
 label: Bourse communale au permis de conduire
-institution: communaute-de-communes-sud-herault
+institution: cc-sud-herault
 description: Afin de répondre aux difficultés de mobilité des jeunes, la
   communauté de communes Sud-Hérault propose une aide au financement du permis
   de conduire de 150 à 500€. Le montant de l'aide varie selon les
