--- a/data/benefits/javascript/communaute-de-communes-rhone-lez-provence-aide-au-financement-du-permis.yml
+++ b/data/benefits/javascript/communaute-de-communes-rhone-lez-provence-aide-au-financement-du-permis.yml
@@ -5,7 +5,7 @@ description:
   pour favoriser l’insertion professionnelle des jeunes par l'accès au permis
   de conduire. Cette aide est attribuée en contrepartie d'un stage d’une durée
   de 10 à 15 jours réalisé au sein de la collectivité.
-prefix: l'
+prefix: l’
 conditions_generales:
   - type: attached_to_institution
   - type: age
