--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "copy:templates": "mkdir -p dist-server/backend/lib/mes-aides/emails/templates && cp backend/lib/mes-aides/emails/templates/* dist-server/backend/lib/mes-aides/emails/templates",
     "build:iframes": "NODE_OPTIONS='--loader ts-node/esm' webpack --config iframes/iframes.config.ts",
     "build:front": "vite build",
+    "build:front:sourcemap": "vite build --outDir dist-sourcemap --emptyOutDir --sourcemap",
     "build:server": "tsc -p tsconfig.server.json",
     "preview": "vite preview",
     "lint": "eslint backend data iframes lib src --ext ts,js,vue --max-warnings 0",
