--- a/data/benefits/openfisca/seances_sante_psy_etudiant.yml
+++ b/data/benefits/openfisca/seances_sante_psy_etudiant.yml
@@ -1,6 +1,7 @@
 label: Santé Psy Étudiant
 institution: etat
-description: Vous êtes étudiant et vous ressentez le besoin d’une aide psychologique ?
+description:
+  Vous êtes étudiant et vous ressentez le besoin d’une aide psychologique ?
   Vous pouvez bénéficier de consultations de 45min gratuites avec un psychologue,
   sans avance de frais. Consultez votre Service de santé universitaire (SSU) ou
   votre médecin généraliste, muni de votre carte d’étudiant, afin d’obtenir une lettre
