--- a/data/benefits/openfisca/hauts_de_france_aide_permis.yml
+++ b/data/benefits/openfisca/hauts_de_france_aide_permis.yml
@@ -1,11 +1,12 @@
 label: Aide pour le permis de conduire
 institution: hauts_de_france
-description: La région Hauts-de-France prend en charge 90% du prix du permis pour aider ses habitants de 18-30 ans à passer leur permis de conduire.
+description: La région Hauts-de-France prend en charge 90% du prix du permis
+  pour aider ses habitants de 18-30 ans à passer leur permis de conduire.
 conditions:
   - être agé de 18 à 30 ans.
-  - être en apprentissage, demandeur d'emploi, stagiaire ou dans un parcours contractualisé d’accompagnement vers l’emploi et l’autonomie (PACEA).
-link: https://www.hautsdefrance.fr/permis-de-conduire-aide-2/
-teleservice: https://www.hautsdefrance.fr/testez-votre-eligibilite-aide-au-permis-de-conduire/
+  - "être dans l'une des situations suivantes : en apprentissage, stagiaire, inscrit à Pôle Emploi, inscrit à la Mission locale en PACEA ou en CEJ, lycéen en Terminale d'un Bac Professionnel, en dernière année de CAP, élève d'une Ecole de Production."
+link: https://guide-aides.hautsdefrance.fr/dispositif931
+teleservice: https://aides.hautsdefrance.fr/sub/tiers/aides/details/?sigle=PERM2.0
 prefix: l’
 type: float
 unit: "€"
