ajout de la mention de la période à laquelle il faut faire la demande de bourse dans les conditions

--- a/data/benefits/openfisca/bourse_criteres_sociaux.yml
+++ b/data/benefits/openfisca/bourse_criteres_sociaux.yml
@@ -5,6 +5,7 @@ description: La bourse d'enseignement supérieur sur critères sociaux (BCS) est
   poursuivre des études supérieures.
 conditions:
   - Ne pas en avoir déjà bénéficié 7 (sept) fois.
+  - Effectuer votre demande de bourse entre mars et mai sur le site du Crous.
 link: https://www.service-public.fr/particuliers/vosdroits/F12214
 instructions: https://www.service-public.fr/particuliers/vosdroits/F12214
 prefix: une
