Ajoute le champ conditions_benevoles dans les détails d'une aide (#3823)
* Ajoute le champ conditions_benevoles dans les détails d'une aide

Refacto droits-details

Ajoute conditions_benevoles au schéma (contrib)

Ajoute la visibilité du widget condiitons_bénévole (outil de contrib)

* Ajoute un lien des asso à proximité dans les conditons de bénévolat d'une aide (plateforme JeVeuxAider avec filtre dynamique)

* Reformatte les aides avec les critères conditions_benevole & fix la condition d'affichage (droits-details.vue)

* Uniformise l'affichage des conditions_generales (suppr. guillemets si possible)

Refactorise le texte de voluntary_conditions

* Refactore le champ conditions_benevoles en voluntary_conditions & l'ajoute aux aides openfisca

Refactore le champ condition_benevole en voluntary_condition

* Fetch les coordonnées du centre via une route locale (allège le frontend: fix build error)

* Modifie le widget contributeur pour les conditions bénévoles (string -> list) et ajoute le lien vers jeveuxaider après la derniere condition

* Ajoute un lien par défaut pour rediriger vers jeveuxaider si pas de simulation effectuée

* Refacto: conditions affichage voluntary_conditions avec des computed

* Refacto : centerCoordinates into centerCoordinatesFromPostalCode

* Refacto : postCode into postalCode

* Refacto: /outils/communes/:codePostal into /outils/codePostal/:codePostal

* Refacto : unused cityInseeCode

* Refacto: ajoute lien par défaut si pas de coordonnées du centre (use-voluntary-organisations)

* Refacto use-vonluntary-organisations

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -738,6 +738,22 @@ fields:
   field_not_operator: &field_not_operator
     name: not
     widget: hidden
+  field_voluntary_conditions: &field_voluntary_conditions
+    label: Conditions bénévoles à satisfaire
+    name: voluntary_conditions
+    hint: Un lien dynamique vers la plateforme jeveuxaider.gouv.fr s'ajoutera à la suite de la dernière condition pour orienter l'utilisateur vers des organismes de bénévolat à proximité
+    required: false
+    widget: list
+    collapsed: false
+    field:
+      label: Texte
+      name: text
+      widget: string
+      pattern:
+        [
+          '\.$',
+          "La condition doit commencer par un verbe à l'infinitif et se terminer par un point",
+        ]
   # champs propre aux aides javascript
   field_general_conditions: &field_general_conditions
     label: Conditions générales à satisfaire simultanément
@@ -823,6 +839,7 @@ collections:
       - *field_description
       - *field_definite_article
       - *field_general_conditions
+      - *field_voluntary_conditions
       - *field_eligibility_profile
       - *field_unmodeled_conditions
       - *field_specific_interest
@@ -860,6 +877,7 @@ collections:
       - *field_description
       - *field_definite_article
       - *field_unmodeled_conditions
+      - *field_voluntary_conditions
       - *field_specific_interest
       - *field_result_type
       - *field_result_unit
