--- a/data/benefits/openfisca/iwuy_aide_mobilite_permis.yml
+++ b/data/benefits/openfisca/iwuy_aide_mobilite_permis.yml
@@ -7,6 +7,7 @@ conditions:
   - Avoir obtenu le code de la route.
   - Habiter à Iwuy depuis plus d'un an.
   - Être inscrit en Mission Locale.
+voluntary_conditions:
   - Effectuer une mission bénévole au service de la collectivité.
 link: http://www.iwuy.fr/page.php?id=6
 instructions: http://www.iwuy.fr/page.php?id=6
