raccourcit la description

--- a/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
@@ -1,11 +1,10 @@
 label: bourses sanitaires et sociales
 institution: martinique
-description: "La Collectivité Territoriale de Martinique verse des bourses aux
-  personnes inscrites dans une formation sanitaire ou sociale dispensée par un
-  établissement agréé et préparant à un diplôme d'Etat : formation initiale
-  en travail social, formation paramédicale ou formation de sage-femme. La bourse
-  est attribuée selon la situation matérielle de la personne qui fait la demande
-  si elle est indépendante financièrement, ou de sa famille."
+description: "La Collectivité Territoriale verse des bourses aux personnes inscrites
+  dans une formation sanitaire ou sociale dispensée par un établissement agréé et
+  préparant à un diplôme d'Etat : travail social, paramédical ou maïeutique. La
+  bourse est attribuée selon la situation matérielle de la personne qui fait la demande
+  si celle-ci est indépendante financièrement, ou de sa famille."
 prefix: les
 conditions_generales:
   - type: regions
