--- a/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/martinique-bourses-sanitaires-et-sociales.yml
@@ -1,6 +1,7 @@
 label: bourses sanitaires et sociales
 institution: martinique
-description: "La Collectivité Territoriale verse des bourses aux personnes inscrites
+description:
+  "La Collectivité Territoriale verse des bourses aux personnes inscrites
   dans une formation sanitaire ou sociale dispensée par un établissement agréé et
   préparant à un diplôme d'Etat : travail social, paramédical ou maïeutique. La
   bourse est attribuée selon la situation matérielle de la personne qui fait la demande
