Met à jour aide à l'équipement informatique de la Caf de la Haute Marne (#3851)
* mise à jour du pdf des aides, version 2023

* Update data/benefits/javascript/caf-haute-marne-aide-equipement-informatique.yml

Co-authored-by: Simon Hamery <shamery@free.fr>

---------

Co-authored-by: Simon Hamery <shamery@free.fr>

--- a/data/benefits/javascript/caf-haute-marne-aide-equipement-informatique.yml
+++ b/data/benefits/javascript/caf-haute-marne-aide-equipement-informatique.yml
@@ -24,8 +24,8 @@ conditions_generales:
     operator: "<="
     period: month
 profils: []
-link: https://www.caf.fr/sites/default/files/medias/521/partenaires/RIAS%202022_actualisation%2015.12.2022_0.pdf
-instructions: https://www.caf.fr/sites/default/files/medias/521/partenaires/RIAS%202022_actualisation%2015.12.2022_0.pdf
+link: https://www.caf.fr/sites/default/files/medias/521/partenaires/RIAS%202023_actualisation%2001.07.2023_0.pdf#page=36
+instructions: https://www.caf.fr/sites/default/files/medias/521/partenaires/RIAS%202023_actualisation%2001.07.2023_0.pdf#page=36
 prefix: l’
 type: float
 unit: €
