--- a/.github/workflows/check-links-validity.yaml
+++ b/.github/workflows/check-links-validity.yaml
@@ -2,8 +2,8 @@ name: Check links validity
 on:
   workflow_dispatch:
   schedule:
-    # https://crontab.guru/#0_11_*_*_1
-    - cron: "0 11 * * 1"
+    # https://crontab.guru/#30_8_*_*_*
+    - cron: "30 8 * * *"
 jobs:
   run:
     runs-on: ubuntu-20.04
@@ -12,14 +12,12 @@ jobs:
       - run: npm ci
       - id: invalid_links
         run: npm run tools:check-links-validity
-        timeout-minutes: 20
-      - if: steps.invalid_links.outputs.comment
-        uses: ./.github/actions/reopen-issue-with-comment
-        with:
-          issue number: 2945
-          comment: ${{ steps.invalid_links.outputs.comment }}
+        timeout-minutes: 60
       - if: steps.invalid_links.outputs.comment
         name: Send dead links info message
         shell: bash
         run: |
           curl -i -X POST -H 'Content-Type: application/json' -d '{"text": ":icon-info: La liste des aides avec des liens invalides a été mise à jour ici : [lien](https://github.com/betagouv/aides-jeunes/issues/2945)"}' ${{ secrets.MATTERMOST_POST_URL }}
+        env:
+          GRIST_DOC_ID: ${{ secrets.GRIST_DOC_ID }}
+          GRIST_API_KEY: ${{ secrets.GRIST_API_KEY }}
