--- a/data/benefits/javascript/ville-bethune-aide-permis.yml
+++ b/data/benefits/javascript/ville-bethune-aide-permis.yml
@@ -1,31 +1,33 @@
 label: Bourse communale au permis de conduire
 institution: ville-bethune
 description: Ce dispositif proposé par la ville de Béthune finance 80 % du coût
-  total de la formation. En contrepartie,le bénéficiaire s’engage à effectuer
+  total du permis de conduire. En contrepartie,le bénéficiaire s’engage à effectuer
   50h de bénévolat pour la Ville, le plus souvent au bénéfice des associations
-  béthunoises.
+  béthunoises. Le retrait des dossiers de demande de bourse se fera au Point Information
+  Jeunesse, au rez-de-chaussée de la médiathèque Elie Wiesel, place Clemenceau à Béthune.
 prefix: la
 conditions_generales:
   - type: communes
     values:
-      - "11069"
+      - "62119"
   - type: age
     operator: ">="
-    value: 16
-  - type: age
-    operator: <=
-    value: 25
+    value: 18
 profils: []
 conditions:
-  - Effectuer la demande de bourse avant de vous inscrire à l'auto-école et obtenir le code de la route.
+  - Être Béthunois depuis au moins un an à la date du dépôt de dossier.
+  - Avoir une situation sociale, professionnelle ou scolaire visant à l’insertion.
+  - Avoir un projet dans lequel s’inscrit le besoin de passer le permis de conduire.
+  - Avoir effectué sa journée de défense et de citoyenneté (JDC), pour les personnes âgées
+    de moins de 25 ans.
+  - Etre titulaire de l'ASSR2, pour les personnes âgées de moins de 21 ans.
 voluntary_conditions:
-  - Réaliser 60 heures d'action bénévole dans une association basée à
-    Carcassonne.
+  - Réaliser 50 heures d'action bénévole dans une association basée à Béthune.
 interestFlag: _interetPermisDeConduire
 type: float
-unit: €
-periodicite: autre
-legend: maximum
-montant: 700
-link: https://www.carcassonne.org/article-page/bourse-au-permis-0
-instructions: https://www.carcassonne.org/article-page/bourse-au-permis-0
+montant: 80
+unit: "%"
+legend: "du prix du permis"
+periodicite: ponctuelle
+link: https://www.bethune.fr/mes-demarches/jeune/comment-beneficier-de-la-bourse-au-permis-422.html
+instructions: https://www.bethune.fr/mes-demarches/jeune/comment-beneficier-de-la-bourse-au-permis-422.html
