corrige le slug de la ville de béthune

--- a/data/benefits/javascript/ville-bethune-aide-permis.yml
+++ b/data/benefits/javascript/ville-bethune-aide-permis.yml
@@ -1,5 +1,5 @@
 label: Bourse communale au permis de conduire
-institution: ville-bethune
+institution: ville_bethune
 description: Ce dispositif proposé par la ville de Béthune finance 80 % du coût
   total du permis de conduire. En contrepartie,le bénéficiaire s’engage à effectuer
   50h de bénévolat pour la Ville, le plus souvent au bénéfice des associations
