--- a/data/benefits/javascript/metropole_toulon_provence_mediterranee_aide_au_permis_de_conduire.yml
+++ b/data/benefits/javascript/metropole_toulon_provence_mediterranee_aide_au_permis_de_conduire.yml
@@ -4,7 +4,7 @@ description:
   La métropole Toulon Provence Méditerranée aide les personnes demandeuses
   d'emploi et les jeunes suivis en Mission Locale à financer une partie de leurs
   heures de conduite.
-prefix: l'
+prefix: l’
 conditions_generales:
   - type: epcis
     values:
