config: update tsconfig for front

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,13 @@
     "target": "esnext",
     "module": "esnext",
     "strict": true,
-    "jsx": "preserve",
+    "isolatedModules": true,
     "outDir": "dist",
-    "importHelpers": true,
     "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "allowJs": true,
     "resolveJsonModule": true,
     "noImplicitAny": false,
     "noImplicitThis": false,
     "noImplicitReturns": false,
-    "checkJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
