--- a/data/benefits/javascript/nouvelle-aquitaine-aide-passage-permis-conduire-b.yml
+++ b/data/benefits/javascript/nouvelle-aquitaine-aide-passage-permis-conduire-b.yml
@@ -1,6 +1,7 @@
 label: aide au passage du permis de conduire B
 institution: region_nouvelle_aquitaine
-description: La Région Nouvelle-Aquitaine favorise l'accès à l'emploi en proposant une aide au
+description:
+  La Région Nouvelle-Aquitaine favorise l'accès à l'emploi en proposant une aide au
   financement du <a target="_blank" rel="noopener" title ="permis de conduire B - Nouvelle fenêtre"
   href="https://www.service-public.fr/particuliers/vosdroits/F2828">permis de
   conduire B</a> pour les jeunes issus d’un niveau de qualification Bac ou infra Bac et qui s’engagent
