Met à jour les conditions non calculables de l'aide

--- a/data/benefits/openfisca/aide_permis_pro_btp.yml
+++ b/data/benefits/openfisca/aide_permis_pro_btp.yml
@@ -4,7 +4,8 @@ description:
   Cette aide est un coup de pouce de Pro BTP pour favoriser l’autonomie et l’insertion des apprentis de 15 à 30 ans en finançant
   <a target="_blank" rel="noopener" title="le permis voiture (B) - Nouvelle fenêtre" href="https://www.service-public.fr/particuliers/vosdroits/F2828">le permis voiture (B)</a>.
 conditions:
-  - Être adhérent pour la retraite à PRO BTP.
+  - Être en deuxième année d’alternance.
+  - Être adhérent pour la retraite à PRO BTP (Agirc-Arrco).
   - Être inscrit dans une école de conduite.
 link: https://www.probtp.com/part/apprenti/aide-permis.html
 instructions: https://www.probtp.com/part/apprenti/aide-permis.html
