Corrige le lien cassé sur l'aide à la mobilité internationale pour les étudiants de la région PACA et ajoute une condition concernant la durée minimal du stage égale à 8 semaines.

--- a/data/benefits/javascript/region-provence-alpes-cote-azur-programme-regional-aide-mobilite-etudiante-prame.yml
+++ b/data/benefits/javascript/region-provence-alpes-cote-azur-programme-regional-aide-mobilite-etudiante-prame.yml
@@ -20,11 +20,12 @@ profils:
 conditions:
   - Ne pas être bénéficiaire d'une autre aide à la mobilité internationale
     (Erasmus, etc.).
+  - Effectuer un stage d'une durée minimum de 8 semaines.
 interestFlag: _interetEtudesEtranger
 type: float
 unit: €
 periodicite: annuelle
 legend: maximum
 montant: 2500
-link: https://www.maregionsud.fr/toutes-vos-aides/detail/programme-regional-daide-a-la-mobilite-etudiante-prame-enseignement-superieur-2022-2023#:~:text=Montant,revenus%20de%20l'ann%C3%A9e%202020)
+link: https://www.maregionsud.fr/vos-aides/detail/programme-regional-daide-a-la-mobilite-etudiante-prame-enseignement-superieur-2023-2024
 teleservice: https://aidesformation.maregionsud.fr/
